k8s/infra-2/base/traefik-internal/traefik-internal-depl.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-internal-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: traefik-internal
  template:
    metadata:
      labels:
        app: traefik-internal
    spec:
      # https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#more-practical-use-cases
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - traefik-internal
                topologyKey: kubernetes.io/hostname
      serviceAccountName: traefik-internal-ingress-controller
      containers:
        - name: traefik-internal
          image: traefik:v3.2
          args:
            #
            # https://doc.traefik.io/traefik/operations/dashboard/#secure-mode
            #
            # 1. Start by enabling the dashboard by using the following option from Traefik's API on the static configuration:
            # 2. Then define a routing configuration on Traefik itself, with a router attached to the service api@internal in the dynamic configuration, to allow defining:
            #
            - --api=false
            #
            # https://doc.traefik.io/traefik/operations/dashboard/#insecure-mode
            #
            # https://doc.traefik.io/traefik/operations/api/#insecure
            #
            # Enable the API in insecure mode, which means that the API will be available directly on the entryPoint named 'traefik'.
            #
            - --api.insecure=false
            #
            # https://doc.traefik.io/traefik/operations/api/#dashboard
            # https://doc.traefik.io/traefik/operations/dashboard/
            #
            # The dashboard is available at the same location as the API
            # but on the path /dashboard/ by default.
            #
            # The trailing slash / in /dashboard/ is mandatory
            # Optional, Default=true
            #
            - --api.dashboard=false
            #
            # https://doc.traefik.io/traefik/observability/access-logs/#configuration
            #
            - --accesslog
            #
            - --log.level=DEBUG
            #
            #
            # Disables certificate verification between your Traefik instance and your backends
            #
            # https://doc.traefik.io/traefik/v3.0/routing/overview/#insecureskipverify
            #
            - --serversTransport.insecureSkipVerify=true
            #
            - --entrypoints.http.address=:80
            #
            - --providers.kubernetescrd
