k8s/infra-2/base/traefik-internal/traefik-internal-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auth-route
spec:
  entryPoints:
    - http
  routes:
    - match: PathPrefix(`/v1/auth`)
      kind: Rule
      middlewares:
        - name: strip-auth-prefix
      services:
        - name: auth-srv
          port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-auth-prefix
spec:
  stripPrefix:
    prefixes:
      - /v1/auth
